 12.11.2002
************************************************************************************************

A lot of minor bugs fixed that had to do with user object initialization. Calendar classe fully
adopted to new interface. Hierachichal menues have been developed. Object destroyer set it
action (currently user for loggin out). Minor changes in design.

************************************************************************************************
 11.11.2002
************************************************************************************************

Introduced a dynamic calendar class and a dynamic day view class.

Designed the current day overview page and implemented the above classes to work with 
the page generation engine and the overall page frameork.

Introduced a security patch, not allowing not logged in users to see whatever is on the internal
pages.

Added Java Script for popups and deletion confirmation.

************************************************************************************************
 08.11.2002
************************************************************************************************

Overall page generation framework is now fully integrated together with the garbage collector. Any errors spawned during page generation will be reported in a nice form to the user.

Multilangiage support built in, which relies on the HTTP_ACCEPT_LANG global variable and will be by default set to english.

Error lang file has been introduced.

Failure of Local Database Connection will force the server down and spawn an error message. Failure in Remote Database Connection (SADM) will spawn an error message for the garbage collector.

PHP error handler has been overriden with custom error handling routines.
